--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "short_name": "Project Octopus",
+  "short_name": "Branches Of Fate",
   "name": "Create React App Sample",
   "icons": [
     {
